Add prometheus stack and monitoring ingress ArgoCD apps

--- a/prometheus-stack/prometheus-stack-application.yaml
+++ b/prometheus-stack/prometheus-stack-application.yaml
@@ -10,6 +10,7 @@ spec:
     chart: kube-prometheus-stack
     targetRevision: 62.3.0
     helm:
+      skipCrds: true
       valueFiles:
         - values.yaml
     path: .
