--- a/alerts/node-not-ready.yaml
+++ b/alerts/node-not-ready.yaml
@@ -3,6 +3,8 @@ kind: PrometheusRule
 metadata:
   name: node-not-ready
   namespace: monitoring
+  labels:
+    release: prometheus-stack
 spec:
   groups:
     - name: node.rules
