--- a/alerts/pod-alerts.yaml
+++ b/alerts/pod-alerts.yaml
@@ -3,6 +3,8 @@ kind: PrometheusRule
 metadata:
   name: pod-alerts
   namespace: monitoring
+  labels:
+    release: prometheus-stack
 spec:
   groups:
     - name: pod.rules
