--- a/alerts/pod-alerts.yaml
+++ b/alerts/pod-alerts.yaml
@@ -9,7 +9,7 @@ spec:
   groups:
     - name: pod.rules
       rules:
-        - alert: PodNotReady
+        - alert: KubikAlert-PodNotReady
           expr: sum by (namespace, pod) (kube_pod_status_phase{phase!="Running"}) > 0
           for: 1m
           labels:
@@ -18,7 +18,7 @@ spec:
             summary: "Pod not in Running state for more than 1 minute"
             description: "Pod {{ $labels.pod }} in namespace {{ $labels.namespace }} is not Running for more than 1 minute."
 
-        - alert: PodCrashLooping
+        - alert: KubikAlert-PodCrashLooping
           expr: increase(kube_pod_container_status_restarts_total[1m]) > 0
           for: 1m
           labels:
@@ -27,7 +27,7 @@ spec:
             summary: "Pod in CrashLoopBackOff"
             description: "Pod {{ $labels.pod }} in namespace {{ $labels.namespace }} has restarted more than once in the last minute."
 
-        - alert: PodRestartingTooMuch
+        - alert: KubikAlert-PodRestartingTooMuch
           expr: rate(kube_pod_container_status_restarts_total[1m]) > 5
           for: 1m
           labels:
